--- a/index.html
+++ b/index.html
@@ -192,8 +192,9 @@
             <ul id="menu-flters">
               <li data-filter="*" class="filter-active">Show All</li>
               <li data-filter=".filter-starters">Starters</li>
-              <li data-filter=".filter-salads">Main</li>
-              <li data-filter=".filter-specialty">Desserts</li>
+              <li data-filter=".filter-main">Main</li>
+              <li data-filter=".filter-desserts">Desserts</li>
+              <li data-filter=".filter-drinks">Drinks</li>
             </ul>
           </div>
         </div>
@@ -209,12 +210,30 @@
             </div>
           </div>
 
-          <div class="col-lg-6 menu-item filter-specialty">
+          <div class="col-lg-6 menu-item filter-main">
+            <div class="menu-content">
+              <a href="#">Kitfo</a><span>$5.95</span>
+            </div>
+            <div class="menu-ingredients">
+              Red Meat,Butter, Ethiopian Spices
+            </div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-desserts">
             <div class="menu-content">
               <a href="#">Tiramsu</a><span>$5.95</span>
             </div>
             <div class="menu-ingredients">
              A delicious tiramsu cake
+            </div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-drinks">
+            <div class="menu-content">
+              <a href="#">Harar Beer</a><span>$5.95</span>
+            </div>
+            <div class="menu-ingredients">
+              Nice Cold beer
             </div>
           </div>
 
@@ -226,22 +245,31 @@
               A delicate crab cake served on a toasted roll with lettuce and tartar sauce
             </div>
           </div>
-
-          <div class="col-lg-6 menu-item filter-salads">
+          <div class="col-lg-6 menu-item filter-main">
             <div class="menu-content">
-              <a href="#">Kitfo</a><span>$5.95</span>
+              <a href="#">Beyaynet</a><span>$9.95</span>
             </div>
             <div class="menu-ingredients">
-              Red Meat,Butter, Ethiopian Spices
+             Misir Wot, Shero Wot, Gomen
             </div>
           </div>
+         
 
-          <div class="col-lg-6 menu-item filter-specialty">
+          <div class="col-lg-6 menu-item filter-desserts">
             <div class="menu-content">
               <a href="#">Ice cream</a><span>$9.95</span>
             </div>
             <div class="menu-ingredients">
               Vanilla, Chocolate, Oreo , Caramel
+            </div>
+          </div>
+
+          <div class="col-lg-6 menu-item filter-drinks">
+            <div class="menu-content">
+              <a href="#">Walya Beer</a><span>$5.95</span>
+            </div>
+            <div class="menu-ingredients">
+              Nice Cold beer
             </div>
           </div>
 
@@ -254,16 +282,9 @@
             </div>
           </div>
 
-          <div class="col-lg-6 menu-item filter-salads">
-            <div class="menu-content">
-              <a href="#">Beyaynet</a><span>$9.95</span>
-            </div>
-            <div class="menu-ingredients">
-             Misir Wot, Shero Wot, Gomen
-            </div>
-          </div>
+         
 
-          <div class="col-lg-6 menu-item filter-salads">
+          <div class="col-lg-6 menu-item filter-main">
             <div class="menu-content">
               <a href="#">Tibs</a><span>$9.95</span>
             </div>
@@ -272,12 +293,20 @@
             </div>
           </div>
 
-          <div class="col-lg-6 menu-item filter-specialty">
+          <div class="col-lg-6 menu-item filter-desserts">
             <div class="menu-content">
               <a href="#">Lobster Roll</a><span>$12.95</span>
             </div>
             <div class="menu-ingredients">
               Plump lobster meat, mayo and crisp lettuce on a toasted bulky roll
+            </div>
+          </div>
+          <div class="col-lg-6 menu-item filter-drinks">
+            <div class="menu-content">
+              <a href="#">Giorgis Beer</a><span>$5.95</span>
+            </div>
+            <div class="menu-ingredients">
+              Nice Cold beer
             </div>
           </div>
 
